Fixed overlap

--- a/src/style.scss
+++ b/src/style.scss
@@ -199,9 +199,9 @@ color: #E46161;
 
 .easy-section{
 position: absolute;
-width: 60.6vw;
+width: 58.6vw;
 height: max-content;
-left: 37.8vw;
+left: 43.8vw;
 top: 270.4vh;
 
 font-family: Ubuntu;
@@ -512,6 +512,8 @@ font-family: Ubuntu;
 font-style: normal;
 font-weight: bold;
 font-size: 62px;
+text-align: right;
+margin-right: 4vw;
 
 margin-bottom: 15px;
 line-height: 120.4%;
